--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -76,11 +76,12 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
+  fonts:
+    - family: Inter
+      fonts:
+        - asset: assets/fonts/Inter_Regular.ttf
+        - asset: assets/fonts/Inter_Medium.ttf
+        - asset: assets/fonts/Inter_Bold.ttf
   #         style: italic
   #   - family: Trajan Pro
   #     fonts:
