integrate with firebase init firebase auth create account logic

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   injectable:  
   # add get_it  
   get_it:
+  firebase_core: ^3.8.1
+  firebase_auth: ^5.3.4
 
 dev_dependencies:
   # add the generator to your dev_dependencies  
