--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   firebase_core: ^3.8.1
   firebase_auth: ^5.3.4
   cloud_firestore: ^5.5.1
+  fluttertoast: ^8.2.10
 
 dev_dependencies:
   # add the generator to your dev_dependencies  
